# agent-lab-system

./: .gitignore  ARCHITECTURE.md  COMPLETION_REPORT.md  DELIVERY_REPORT.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  README_UPDATED.md  pyproject.toml  verify.py
agent_lab/: __init__.py  cli.py  context.py  session.py
agent_lab/agent/: __init__.py
agent_lab/api/: __init__.py  server.py
agent_lab/config/: __init__.py  loader.py  schema.py
agent_lab/knowledge/: __init__.py
agent_lab/memory/: __init__.py
agent_lab/providers/: __init__.py  anthropic_compat.py  base.py  factory.py  openai_compat.py
agent_lab/skills/: __init__.py
agent_lab/tools/: __init__.py  base.py  builtin.py  registry.py
agent_lab/web/: __init__.py  app.py
agent_lab/web/templates/: index.html  logs.html
agent_lab/workspace/: __init__.py
config/: agent.md  config.json  memory_organizer_prompt.md
config/workspace/: README.md
config/workspace/identity/: agent_identity.json
config/workspace/memories/: agent_identity.md  long_term.md  short_term.md  user.md
config/workspace/profile/: user_profile.json
config/workspace/prompts/: agent.md
config/workspace/skills/python-assistant/: SKILL.md
config/workspace/state/: policies.md  runtime_notes.md
doc/: ARCHITECTURE.md  COMPLETION_REPORT.md  DELIVERY_REPORT.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  MEMORY_OPTIMIZATION_2026_04.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README_UPDATED.md  SYSTEM_PROMPT_INJECTION.md  user_notes.md
test_ws/memories/: agent_identity.md  user.md
tests/: test_basic.py
