[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-lab"
version = "0.1.0"
description = "Minimal agent system for Python 3.12"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Agent Lab Contributors"}]
keywords = ["agent", "llm", "tools", "openai", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.24.0",
    "typer>=0.9.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
agent-lab = "agent_lab.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["agent_lab*"]

[tool.setuptools.package-data]
agent_lab = [
    "skills/**/*.md",
    "templates/**/*.md",
    "web/templates/*.html",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py"]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-select = ["E", "F", "W"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
check_untyped_defs = true
